// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader should accept a link prop 1`] = `
<SectionHeader
  link={
    <a>
      More...
    </a>
  }
>
  <div
    className="one-whole"
  >
    <div
      className="one-half floating display-inline-block floating--left soft soft-half-left"
    >
      <h6
        className="floating__item text-dark-tertiary flush"
      />
    </div>
    <div
      className="one-half floating display-inline-block floating--right soft soft-half-right"
    >
      <a>
        More...
      </a>
    </div>
  </div>
</SectionHeader>
`;

exports[`SectionHeader should accept a title prop 1`] = `
<SectionHeader
  title="hello world"
>
  <div
    className="one-whole"
  >
    <div
      className="one-half floating display-inline-block floating--left soft soft-half-left"
    >
      <h6
        className="floating__item text-dark-tertiary flush"
      >
        hello world
      </h6>
    </div>
    <div
      className="one-half floating display-inline-block floating--right soft soft-half-right"
    />
  </div>
</SectionHeader>
`;

exports[`SectionHeader should render properly with all props 1`] = `
<SectionHeader
  link={
    <a>
      More...
    </a>
  }
  title="Harambe"
>
  <div
    className="one-whole"
  >
    <div
      className="one-half floating display-inline-block floating--left soft soft-half-left"
    >
      <h6
        className="floating__item text-dark-tertiary flush"
      >
        Harambe
      </h6>
    </div>
    <div
      className="one-half floating display-inline-block floating--right soft soft-half-right"
    >
      <a>
        More...
      </a>
    </div>
  </div>
</SectionHeader>
`;

exports[`SectionHeader should render with minimal props 1`] = `
<SectionHeader>
  <div
    className="one-whole"
  >
    <div
      className="one-half floating display-inline-block floating--left soft soft-half-left"
    >
      <h6
        className="floating__item text-dark-tertiary flush"
      />
    </div>
    <div
      className="one-half floating display-inline-block floating--right soft soft-half-right"
    />
  </div>
</SectionHeader>
`;
